# duplicateFilesFinder

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  duplicateFilesFinder.pro  filehashcalculatorthread.cpp  filehashcalculatorthread.h  founditemwebwidget.cpp  founditemwebwidget.h  founditemwebwidget.ui  founditemwidget.cpp  founditemwidget.h  founditemwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewwidgetaudio.cpp  previewwidgetaudio.h  previewwidgetaudio.ui  previewwidgetimage.cpp  previewwidgetimage.ui  previewwidgetvideo.cpp  previewwidgetvideo.h  previewwidgetweb.cpp  previewwidgetweb.h  searchressulttablewidget.cpp  searchressulttablewidget.h
cmake/: QtCommon.cmake
components/: commonlistwidget.cpp  commonlistwidget.h  searchressulttablewidget.cpp  searchressulttablewidget.h  tfilterwidget.cpp  tfilterwidget.h
preview/: previewwidgetaudio.cpp  previewwidgetaudio.h  previewwidgetimage.h  previewwidgetvideo.cpp  previewwidgetvideo.h  previewwidgetweb.ui
src/: common.cpp  common.h  filehashcalculatorthread.cpp  filehashcalculatorthread.h  founditemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/components/: commonlistwidget.ui  searchressulttablewidget.h  tfilterwidget.cpp  tfilterwidget.h  tfilterwidget.ui
src/preview/: previewwidgetaudio.cpp  previewwidgetaudio.h  previewwidgetimage.cpp  previewwidgetvideo.cpp  previewwidgetvideo.h  previewwidgetvideo.ui  previewwidgetweb.h
utils/: common_util.cpp  common_util.h
